<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tv_api_abnormal">接口返回异常</string>
    <string name="tv_input_all">请填写完整信息！</string>
    <string name="tv_title_fault">轻度故障</string>
    <string name="tv_midlle_fault">中度故障</string>
    <string name="tv_big_fault">重度故障</string>
      <string name="tv_receive_task">接收任务</string>
    <string name="tv_operating_waitting">正在操作，请稍候&#8230;</string>
    <string name="tv_data_submiting">数据正在提交&#8230;</string>
    <string name="tv_content_not_null">内容不能为空</string>
    <string name="tv_task_content_not_null">任务内容不能为空</string>
    <string name="tv_need_order_not_null">所需工具指令不能为空</string>
    <string name="tv_work_order_not_null">工作指令不能为空</string>
    <string name="tv_number_no_more_than_400">字数不超过400字</string>
    <string name="tv_remain_question">遗留问题</string>
    <string name="tv_expend_material">消耗的备品备件，材料</string>
    <string name="tv_return_all">一键还原</string>
    <string name="tv_neiwang">内网连接</string>
    <string name="err_iv_202">上传图片失败</string>
    <string name="err_iv_101">无权操作，操作失败</string>
    <string name="hello_world">能服务</string>
    <string name="app_name">能服务</string>
    <string name="tv_energy_server">能服务</string>
    <string name="tv_mobile_tab">手机号码</string>
    <string name="tv_mobile_tab2">请输入手机号码</string>
    <string name="tv_password">密码</string>
    <string name="tv_fotpwd">忘记密码?</string>
    <string name="tip_no_sdcard">没有内存卡！</string>
    <string name="tv_yes">确定</string>
    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_logouting">账号退出中&#8230;</string>
    <string name="tv_new_user_register">新用户注册</string>
    <string name="err_pe_101">昵称太长</string>
    <string name="tv_edit_scuss">保存成功</string>
    <string name="tv_input_code">请输入验证码</string>
    <string name="tv_get_code">获取验证码</string>
    <string name="tv_next">下一步</string>
    <string name="tv_pwd">请输入密码</string>
    <string name="tv_back_pwd">找回密码</string>
    <string name="tv_new_pwd">请输入新密码</string>
    <string name="tv_new_pwd_again">请再次输入新密码</string>
    <string name="tv_set_pwd">设置新密码</string>
    <string name="tv_submit">提交</string>
    <string name="tv_year_month_select">年月选择:</string>
    <string name="tv_month_day_select">月日选择:</string>
    <string name="tv_busy_state_0">暂时待命</string>
    <string name="tv_busy_state_1">正在忙碌</string>
    <string name="tv_chongshi">点击空白区域重试</string>
    <string name="err_video_all">设备连接错误 : -%1$s-</string>
    <string name="err_video_7">连接设备失败,暂时无法播放视频,请稍后再试</string>
    <string name="tv_home">首页</string>
    <string name="tv_site">站点</string>
    <string name="tv_task">任务</string>
    <string name="tv_personal">我的</string>
    <string name="tv_personal_msg">个人信息</string>
    <string name="app_exit">再按一次退出程序</string>
    <string name="tv_message">消息中心</string>
    <string name="tv_no_shuju">该时段没有数据！</string>
    <string name="tv_no_quanxian">对不起，您没有该权限！</string>
    <string name="tv_isfinish">该告警正在处理中，不用再次发送任务！</string>
    <string name="tv_finished">该告警已经处理完成，不能再次发送任务！</string>
    <string name="tv_site_not_send">该告警信息不能发布任务！</string>
    <string name="tv_tk_state_0">待接收</string>
    <string name="tv_tk_state_1">进行中</string>
    <string name="tv_tk_state_2">已完成</string>
    <string name="tv_tk_state_3">已汇报</string>
    <string name="tv_tk_type_0">接收任务</string>
    <string name="tv_tk_type_1">完成任务</string>
    <string name="tv_tk_type_2">汇报任务</string>
    <string name="tv_tk_type_3">已汇报</string>
    <string name="tv_look">查看任务</string>
    <string name="tv_data_uping2">视频正在加载中...</string>
    <string name="tv_data_uping">数据加载中...</string>
    <string name="tv_city_uping">城市正在定位中...</string>
    <string name="tv_not_netlink">当前网络不可用</string>
    <string name="tv_not_net_use">当前网络不可用，过会儿再试试吧</string>
    <string name="tv_msg_des">消息详情</string>
    <string name="tv_que_back">问题反馈</string>
    <string name="tv_exchange_of_skills">技术交流</string>
    <string name="tv_update_pwd">修改密码</string>
    <string name="tv_version_update">版本更新</string>
    <string name="tv_code_dl">二维码下载</string>
    <string name="tv_exit">退出登录</string>
    <string name="tv_untreated">未处理</string>
    <string name="tv_processed">已处理</string>
    <string name="tv_save">保存</string>
    <string name="tv_alarm_msg">告警信息</string>
    <string name="tv_detail">详细</string>
    <string name="tv_exchange_detail">交流详情</string>
    <string name="tv_person">头像</string>
    <string name="tv_name">名称</string>
    <string name="tv_conect">联系方式</string>
    <string name="tv_site2">所属站点</string>
    <string name="tv_content_tab">说点什么吧...</string>
    <string name="tv_send">发布</string>
    <string name="tv_send2">发送</string>
    <string name="tv_send_suess">发送成功</string>
    <string name="tv_unfinish">待完成</string>
    <string name="tv_finish">已完成</string>
    <string name="tv_finish2">完成</string>
    <string name="tv_task_list">任务列表</string>
    <string name="tv_exit_tab">确定要退出登录账号吗？</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_yes">确定</string>
    <string name="tv_down_app">扫一扫能服务下载</string>
    <string name="tv_version_checking">版本更新中...</string>
    <string name="tv_version_no">当前版本已是最新版本</string>
    <string name="tv_vsion_do_next">下次再说</string>
    <string name="tv_vsion_do_now">立即更新</string>
    <string name="tv_version_updata2">版本更新(当前版本：%1$s)</string>
    <string name="tv_version_updata_question">发现新版本(%1$s),是否更新？</string>
    <string name="tv_vsion_updataing">版本更新中&#8230;</string>
    <string name="tv_select_map">查看地图</string>
    <string name="tv_task_des">任务详情</string>
    <string name="tv_send_time">发送时间</string>
    <string name="tv_location">地点</string>
    <string name="tv_fault">故障</string>
    <string name="tv_need_tool">所需工具备件</string>
    <string name="tv_work_order">工作指令</string>
    <string name="tv_receipt_time">接收时间</string>
    <string name="tv_report_time">汇报时间</string>
    <string name="tv_report_content">汇报内容</string>
    <string name="tv_task_state">任务状态</string>
    <string name="tv_send_task">发送任务</string>
    <string name="tv_device">设备</string>
    <string name="tv_land_over_que">遗留问题</string>
    <string name="tv_alarm_happen_time">告警发生时间</string>
    <string name="tv_need_order">所需工具指令</string>
    <string name="tv_input">请填写</string>
    <string name="tv_choose_run_person">选择运营人员</string>
    <string name="tv_gps">开始导航</string>
    <string name="tv_detail2">详情</string>
    <string name="tv_recommand_road">推荐路线</string>
    <string name="tv_publish_people">发布人</string>
    <string name="tv_ok">确认</string>
    <string name="tv_receive_people">接收人</string>
    <string name="tv_receiver_task">确认接收该任务吗?</string>
    <string name="tv_receiverd_task">确认任务已完成?</string>
    <string name="tv_tab_feedback_hint">描述工作详细内容</string>
    <string name="tv_map_uploading">图片正在上传中...</string>
    <string name="tv_map_upload_failure">图片上传失败！</string>
    <string name="tv_map_upload_success">头像上传成功！</string>
    <string name="tv_report_task">汇报任务</string>
    <string name="tv_del_map_tab">图片删除&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
          &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="tv_del_opera_tab">运维人员删除&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
          &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="tv_del_map_check_tab">确定不要该图片吗？</string>
    <string name="tv_del_opera_check_tab">确定移除该运维人员吗？</string>
    <string name="tv_input_task">请输入您要发布的任务</string>
    <string name="tv_publish_task">发布任务</string>
    <string name="tv_p_logo_tab">最佳效果展示，建议尺寸：150*150</string>
    <string name="tv_address_hint3">选择省</string>
    <string name="tv_facility_not_play_arguments_full">该设备暂时无法播放，请检查参数设置是否完整</string>
    <string name="err_ans_101">字数过多</string>
    <string name="err_ans_102">回答失败</string>
    <string name="tv_old_pass">请输入旧密码</string>
    <string name="tv_new_pass">请输入新密码</string>
    <string name="tv_setion_name">设备名称</string>
   
    <string name="tv_shicezhi2">测试点</string>
    <string name="tv_shicezhi">实测值</string>
    <string name="tv_danwei">单位</string>
    <string name="tv_states">状态</string>
    <string name="tv_huilubianhao">回路编号</string>
  
    <string name="err_pt_104">已经发布过了</string>
    <string name="err_pt_103">字数过多</string>
    <string name="err_hb_104">已经处理完了</string>
    <string name="err_hb_101">操作失败</string>
    <string name="err_pt_102">发布失败</string>
    <string name="err_pt_scuss">发布成功</string>
    <string name="tv_yunwei_person">运维人员选择</string>
    <string name="update_pwd_success">修改密码成功！</string>
    <string name="err_301">数据库错误!</string>
    <string name="tv_phone_no_null">电话号码不能为空</string>
    <string name="tv_phone_style_err">电话号码格式错误</string>
    <string name="tv_code_no_null">验证码不能为空</string>
    <string name="err_101">格式不正确</string>
    <string name="err_102">用户已注册</string>
    <string name="err_302">请勿频繁获取验证码！</string>
    <string name="err_300">数据校验失败，必须POST传入</string>
    <string name="err_300_2">参数错误</string>
    <string name="tv_reg_code_no_null">验证码不能为空</string>
    <string name="tv_reg_pwd_no_null">请输入密码</string>
    <string name="tv_pwd_style_err">密码必须为数字和字母且长度大于6位</string>
    <string name="err_reg_101">手机格式错误</string>
    <string name="err_reg_102">密码格式错误</string>
    <string name="err_reg_103">验证码格式错误</string>
    <string name="err_reg_104">验证码错误</string>
    <string name="err_reg_105">已经注册</string>
    <string name="err_reg_301">写入数据失败</string>
    <string name="tv_register_scuess">注册成功</string>
    <string name="err_mobile">手机号格式不正确！</string>
    <string name="tv_password_tab">请输入登录密码</string>
    <string name="err_login_101">密码或用户名错误</string>
    <string name="err_login_204">会员账号被拉黑冻结</string>
    <string name="err_login_201">会员账号(该手机号)未注册</string>
    <string name="tv_login_scuesss">登录成功</string>
    <string name="tv_hb_scuesss">发送成功</string>
    <string name="tv_hb_scuesss4">汇报成功</string>
    <string name="tv_hb_scuesss2">您接收了该任务</string>
    <string name="tv_hb_scuesss3">您完成了该任务</string>
    <string name="tv_pwd_no_null">新密码不能为空</string>
    <string name="err_201">用户未注册</string>
    <string name="err_202">用户未登录</string>
    <string name="err_203">帐号已经在别处登入</string>
    <string name="err_204">用户被拉黑</string>
    <string name="err_fot_101">手机号码错误</string>
    <string name="err_new_101">原密码错误</string>
    <string name="err_new_102">密码格式错误</string>
    <string name="tv_pwd_same">两次密码不一致</string>

</resources>