<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_3" >

    <include layout="@layout/include_top_2"/>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/bg_cricle6"
        android:orientation="vertical"
        android:padding="15dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                 android:maxLength="11"
                 android:drawableLeft="@drawable/icon_phone2"
                android:drawablePadding="10dp"
                android:hint="@string/tv_mobile_tab2"
                android:imeOptions="actionNext"
                android:phoneNumber="true"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginBottom="15dip"
            android:src="@color/gray_1" />

        
        <LinearLayout 
              android:padding="10dip" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:background="@null"
                android:ems="10"
                android:drawableLeft="@drawable/icon_code"
				android:drawablePadding="10dp"
                android:hint="@string/tv_input_code"
                android:paddingRight="10dip"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
             
            <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.015"
            android:layout_height="match_parent"
            android:background="@color/cr_green_1"
            android:layout_marginBottom="5dp" />
             
            
            <TextView 
                android:id="@+id/tv_get_code"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv_get_code"
                 android:textColor="@color/cr_green_1"
            android:textSize="16sp"/>
            
            
        </LinearLayout>
        
            <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginBottom="15dip"
            android:src="@color/gray_1" />
                <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:hint="@string/tv_pwd"
                android:password="true"
                android:imeOptions="actionNext"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginBottom="15dip"
            android:src="@color/gray_1" />
            
            
            
            <TextView 
        android:id="@+id/tv_submit"
       android:background="@drawable/bg_cricle8"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:text="@string/tv_submit"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="10dp"
        />
            
    </LinearLayout>
 	
    
    <include layout="@layout/load_dialog"/>
    
    </FrameLayout>

</LinearLayout>