<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_3" >

    <include layout="@layout/include_top_2" />

    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:background="@drawable/bg_cricle6"
        android:orientation="vertical"
        android:padding="15dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/tv_new_pwd"
                android:imeOptions="actionNext"
                android:password="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginBottom="15dip"
            android:src="@color/gray_1" />
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >
        
        <EditText
            android:id="@+id/et_new_pwd_again"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/tv_new_pwd_again"
            android:password="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
		</LinearLayout>
		
            <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginBottom="15dip"
            android:src="@color/gray_1" /> 
         
         <TextView
             android:layout_marginTop="30dp"
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_cricle8"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tv_next"
        android:textColor="@color/black"
        android:textSize="16sp" />
    </LinearLayout>

      	<include layout="@layout/load_dialog"/>
</FrameLayout>
</LinearLayout>